--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ header {
   border: none;
 }
 
+h1 {
+  margin: 50px 0 -10px 0;
+}
+
 h4 {
   text-align: center;
 }
@@ -45,7 +49,7 @@ select {
   border-radius: 8px;
   font-size: 1em;
   height: auto;
-  margin: 0;
+  margin: 10px 0 0 0;
   padding: 25px;
   width: 100%;
   background-color: #e8eeef;
@@ -90,12 +94,18 @@ button {
   margin-bottom: 10px;
 }
 
+
 textarea:focus {
   outline-color: #ff8080;
 }
 
 select:focus {
   outline-color: #ff8080;
+}
+
+
+textarea {
+  margin-top: 15px;
 }
 
 .container {
@@ -109,11 +119,16 @@ select:focus {
 
 .info {
   color: grey;
+  margin: 30px 0 40px 0;
+
+
 }
 
 .thick {
+
   border: solid 2px;
   width: 90%;
+
 }
 
 .thin {
@@ -140,7 +155,25 @@ select:focus {
 
 /* Media Queries */
 @media (min-width: 768px) {
-  .container {
+  .one div {
     display: flex;
   }
+
+  .one div input,
+  .one div select {
+    flex-grow: 1;
+    flex-basis: 65%;
+    margin-left: 20px;
+  }
+
+  .one div label {
+    flex-basis: 25%;
+    height: 50px;
+    margin: auto 0;
+  }
+}
+
+#zip {
+  max-width: 25%;
+}
 }
